k8s/client/client-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
    name: client-cluster-ip
spec:
    type: ClusterIP
    ports:
        - port: 80
          targetPort: 80
    selector:
        component: web
