k8s/client/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    ngnix.ingress.kubernetes.io/rewrite-target: /    
spec:
  rules:
    - http:
        paths:
          - path : /
            backend:
              serviceName: client-cluster-ip
              servicePort: 80
          - path: /api/
            backend:
              serviceName: server-cluster-ip
              servicePort: 3000
